refactor: Http Header 객체 추출